--- a/AarshiWebD/new.html
+++ b/AarshiWebD/new.html
@@ -51,7 +51,7 @@
 		</center>
 
 		<div id="me">
-			<a href="https://www.facebook.com/aarshi.chourasia" target="_blank">
+			<a href="https://www.facebook.com" target="_blank">
 				<figure id="fb">
 					<img src="images/facebook.png" alt="Facebook" width="100px" height="100px" class="images">
 					<figcaption>
